# ligo-metaio

./: AUTHORS  HISTORY  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  libmetaio.pc.in  libmetaio.spec  libmetaio.spec.in  ligo-metaio_8.4.0.orig.tar.gz.delta  ligo-metaio_8.4.0.orig.tar.gz.id
debian/: Makefile  Makefile.am  Makefile.in  changelog  control  control.in  libmetaio-dev.install  libmetaio-matlab.install  postinst  postrm  rules  watch
debian/patches/: adjust_automake_version.patch  configure.patch  series  typical_stricter_compilation_settings_cause_errors.patch
gnuscripts/: Makefile.am  Makefile.in  ax_check_zlib.m4  ax_matlab_sys_zlib.m4  ccmex.m4  matlab.m4  matlabver.m4  mexext.m4
ligotools/: Makefile.am  Makefile.in  ligotools.mk  pkgfiles
matlab/: Makefile.am  Makefile.in  readMeta.c  readMeta.m
src/: Makefile.am  Makefile.in  _getMetaLoopHelper.c  blobtest.xml.lwtcut_output  concatMeta  config.h.in  dmt_sample.xml  dmt_sample.xml.lwtcut_output  gdstrig10.xml  gdstrig10.xml.lwtcut_output  gdstrig10.xml.lwtprint_output  gdstrig5000.xml  ligo_lw_header.h  ligo_lw_header.xml  lwtcut.c  lwtdiff.c  lwtprint.c  lwtscan.c  lwtselect  metaio.c  metaio.h  metaio_test.sh  parse_test.c  parse_test_table_only.c
