EXTRA_DIST = \
	ax_cflags_warn_all.m4 \
	ax_check_zlib.m4 \
	ax_matlab_sys_zlib.m4 \
	ccmex.m4 \
	config.guess \
	config.sub \
	depcomp \
	install-sh \
	libtool.m4 \
	ltmain.sh \
	ltoptions.m4 \
	ltsugar.m4 \
	ltversion.m4 \
	lt~obsolete.m4 \
	matlab.m4 \
	matlabdir.m4 \
	matlabver.m4 \
	mex.m4 \
	mexext.m4 \
	mexopt.m4 \
	missing \
	test-driver
